# puffer

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  agent.md  index.html  soul.md
apps/puffer-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
benchmark/genskill/ladybird/: .gitignore  Cargo.toml  Dockerfile.ladybird-eval  README.md
crates/puffer-cli/: Cargo.toml
crates/puffer-cli/src/: attachment_bridge.rs  auth_provider.rs  basic_commands.rs  benchmark_reflection.rs  benchmark_run.rs  benchmark_trace.rs  browser.rs  browser_args.rs  browser_output.rs  browser_profiles.rs  browser_tests.rs  cli_args.rs  command_surface.rs  connect.rs  connectors.rs  daemon.rs  daemon_browser.rs  daemon_browser_settings.rs  daemon_contacts.rs  daemon_contacts_delete_tests.rs  daemon_contacts_infer.rs  daemon_contacts_params.rs  daemon_contacts_save_tests.rs  daemon_contacts_store.rs  daemon_contacts_telegram.rs  daemon_contacts_telegram_peer_cache.rs  daemon_contacts_tests.rs  daemon_contacts_trace.rs  daemon_files.rs  daemon_fs_watch.rs  daemon_gcal_browser_setup.rs  daemon_gmail_browser_setup.rs  daemon_lambda_skills.rs  daemon_local_model.rs  daemon_lsp.rs  daemon_pty.rs  daemon_secrets.rs  daemon_singleton.rs  daemon_telegram_ranking.rs  daemon_title.rs  (+32 more)
crates/puffer-cli/tests/: auth_custom_provider.rs  cli_surface.rs  daemon_turn_smoke.rs  hot_reload_cli.rs  hot_reload_tmux.rs  tmux_agent_loop.rs  tmux_connector_monitor.rs  tmux_help.rs  tmux_overlays.rs  tmux_smoke.rs  tmux_snapshots.rs
crates/puffer-cli/wechat-vz/: README.md  a11y_locate.py  apply-runtime-a11y.sh  guest-setup.sh
crates/puffer-config/: Cargo.toml
crates/puffer-config/src/: browser.rs  browser_extension_stage.rs  env_vars.rs  env_vars_tests.rs  home_override.rs  lib.rs  project_memory.rs  proxy.rs  settings_catalog.rs
crates/puffer-connector-core/: Cargo.toml
crates/puffer-connector-core/src/: commands.rs  config.rs  lib.rs  runtime.rs  session_map.rs  support.rs  traits.rs
crates/puffer-connector-core/tests/: integration.rs
crates/puffer-connector-discord/: Cargo.toml
crates/puffer-connector-discord/src/: config.rs  connector.rs  handler.rs  lib.rs
crates/puffer-connector-email/: Cargo.toml
crates/puffer-connector-email/src/: config.rs  connector.rs  handler.rs  lib.rs
crates/puffer-connector-matrix/: Cargo.toml
crates/puffer-connector-matrix/src/: config.rs  connector.rs  handler.rs  lib.rs
crates/puffer-connector-slack/: Cargo.toml
crates/puffer-connector-slack/src/: config.rs  connector.rs  handler.rs  lib.rs
crates/puffer-connector-webhook/: Cargo.toml
crates/puffer-connector-webhook/src/: config.rs  connector.rs  handler.rs  lib.rs  router.rs
crates/puffer-core/: Cargo.toml  agent_catalog.rs  autodream.rs  command.rs  command_helpers.rs  command_summary.rs  config_settings.rs  lib.rs  media_runtime.rs  media_runtime_artifacts.rs  media_runtime_generated_preview_tests.rs  media_runtime_internal_tools.rs  media_runtime_tests.rs  media_runtime_video.rs  memory.rs  model_preferences.rs  network.rs  permissions.rs  recap.rs  runner_adapter.rs  runtime.rs  state.rs  test_locks.rs  ultrareview.rs  user_memory.rs  workspace_paths.rs
crates/puffer-core/autodream/: status.rs  tests.rs
crates/puffer-core/command/: registry.rs  tests.rs
crates/puffer-core/command_helpers/: auth.rs  autodream.rs  common.rs  common_tests.rs  config.rs  connect.rs  connect_tests.rs  doctor.rs  ecosystem.rs  genskill.rs  goal.rs  lambda_doctor.rs  lambda_skill_status.rs  mod.rs  monitor.rs  pentest.rs  prompt.rs  prompt_tests.rs  recap.rs  reflect.rs  resume.rs  session.rs  session_tests.rs  tasks.rs  telegram.rs  terminal_setup.rs  workflows.rs
crates/puffer-core/examples/: genskill_e2e_probe.rs  recap_probe.rs  structured_output_probe.rs
crates/puffer-core/permissions/: acl.rs  browser_action.rs  browser_evaluator.rs  browser_grants.rs  browser_policy.rs  browser_target.rs  execution.rs  profile.rs  tests.rs
crates/puffer-core/runner_mcp/: connection_manager.rs  host.rs  http_launcher.rs  launcher.rs  mod.rs  transport.rs
crates/puffer-core/runtime/: agent_loop.rs  agent_runtime_tests.rs  agent_support.rs  agents.rs  anthropic.rs  anthropic_sse.rs  auto_approval_review.rs  background_tasks.rs  background_tasks_tests.rs  blocking_loop.rs  browser_auto_review.rs  context_usage.rs  debug_context.rs  filesystem_access.rs  goals.rs  http_support.rs  internal_tool_permissions.rs  lambda_gate.rs  lambda_skill_activation.rs  lambda_tool.rs  local_tools.rs  mcp_discovery.rs  openai.rs  openai_sse.rs  openai_ws.rs  permission_prompt.rs  plan_events.rs  process_store.rs  quota.rs  reflection.rs  resource_watcher.rs  secrets.rs  side_question.rs  skill_obligation.rs  structured_output_support.rs  system_prompt.rs  teammate_loop.rs  tests.rs  tests_transcript.rs  tool_batch.rs  (+2 more)
crates/puffer-core/tests/: hot_reload.rs  runner_mcp_http.rs  runner_mcp_oauth.rs  runner_mcp_stdio.rs  runner_mcp_tool_advertising.rs
crates/puffer-mcp-oauth/: Cargo.toml
crates/puffer-mcp-oauth/src/: callback.rs  lib.rs  service.rs  store.rs
crates/puffer-mcp-oauth/tests/: oauth_e2e.rs  oauth_stub_server.rs
crates/puffer-media/: Cargo.toml
crates/puffer-media/src/: artifacts.rs  diagnostics.rs  generated_preview_tests.rs  internal_tools.rs  lib.rs  runtime.rs  runtime_tests.rs  video.rs
crates/puffer-provider-openai/: Cargo.toml
crates/puffer-provider-openai/src/: auth.rs  codex.rs  lib.rs  request.rs  response.rs  usage.rs
crates/puffer-provider-registry/: Cargo.toml
crates/puffer-provider-registry/src/: auth.rs  discovery.rs  import.rs  lib.rs  media_capability.rs  (+3 more)
crates/puffer-resources/: Cargo.toml
crates/puffer-runner-grpc/: Cargo.toml  build.rs
crates/puffer-runner-local/: Cargo.toml
crates/puffer-secrets/: Cargo.toml
crates/puffer-skill-evolution/: Cargo.toml  generate.rs  judge.rs  lib.rs  mutate.rs  pareto.rs  parse.rs  trace.rs
crates/puffer-subscriber-telegram-user/: Cargo.toml
crates/puffer-tool-runner/: Cargo.toml
crates/puffer-tools/: Cargo.toml
crates/puffer-tui/: Cargo.toml
(+2303 files in other folders)
