[workspace]
members = [
    "crates/puffer-cli",
    "crates/puffer-config",
    "crates/puffer-connector-core",
    "crates/puffer-connector-discord",
    "crates/puffer-connector-email",
    "crates/puffer-connector-matrix",
    "crates/puffer-connector-slack",
    "crates/puffer-connector-telegram",
    "crates/puffer-connector-webhook",
    "crates/puffer-core",
    "crates/puffer-provider-openai",
    "crates/puffer-provider-registry",
    "crates/puffer-resources",
    "crates/puffer-session-store",
    "crates/puffer-test-support",
    "crates/puffer-tools",
    "crates/puffer-transport-anthropic",
    "crates/puffer-tui",
]
default-members = ["crates/puffer-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
html2text = "0.13.5"
glob = "0.3.3"
fslock = "0.2.1"
indexmap = { version = "2.12.1", features = ["serde"] }
insta = "1.44.1"
jsonschema = { version = "0.45.1", default-features = false }
libloading = "0.8.9"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_yaml = "0.9.34"
shell-words = "1.1.0"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "local-offset", "parsing"] }
toml = "0.9.8"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
