[package]
name = "puffer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "puffer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
uuid.workspace = true
url = "2.5.7"
puffer-config = { path = "../puffer-config" }
puffer-core = { path = "../puffer-core" }
puffer-provider-openai = { path = "../puffer-provider-openai" }
puffer-provider-registry = { path = "../puffer-provider-registry" }
puffer-resources = { path = "../puffer-resources" }
puffer-session-store = { path = "../puffer-session-store" }
puffer-transport-anthropic = { path = "../puffer-transport-anthropic" }
puffer-tools = { path = "../puffer-tools" }
puffer-tui = { path = "../puffer-tui" }

[dev-dependencies]
puffer-config = { path = "../puffer-config" }
puffer-session-store = { path = "../puffer-session-store" }
puffer-test-support = { path = "../puffer-test-support" }
tempfile.workspace = true
