[package]
name = "puffer-connector-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7"
puffer-connector-core = { path = "../puffer-connector-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
tower = "0.5"
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
puffer-config = { path = "../puffer-config" }
puffer-provider-registry = { path = "../puffer-provider-registry" }
puffer-resources = { path = "../puffer-resources" }
puffer-session-store = { path = "../puffer-session-store" }
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
