[package]
name = "puffer-media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
uuid.workspace = true
puffer-provider-registry = { path = "../puffer-provider-registry" }

[dev-dependencies]
indexmap.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
