[package]
name = "puffer-provider-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
os_info = "3.13.0"
rand = "0.9.2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
url = "2.5.7"
puffer-provider-registry = { path = "../puffer-provider-registry" }
