[package]
name = "puffer-provider-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
indexmap.workspace = true
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
puffer-config = { path = "../puffer-config" }

[dev-dependencies]
tempfile.workspace = true
