[package]
name = "puffer-resources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
include_dir = "0.7"
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
puffer-config = { path = "../puffer-config" }
puffer-provider-registry = { path = "../puffer-provider-registry" }
puffer-runner-api = { path = "../puffer-runner-api" }

[dev-dependencies]
tempfile.workspace = true
