[package]
name = "puffer-runner-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
puffer-runner-api = { path = "../puffer-runner-api" }

anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true

prost = "0.13"
tonic = { version = "0.12", features = ["transport", "tls"] }
tokio = { version = "1.51", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures-core = "0.3"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }

[dev-dependencies]
puffer-runner-local = { path = "../puffer-runner-local" }
puffer-core = { path = "../puffer-core" }
puffer-mcp-oauth = { path = "../puffer-mcp-oauth" }
puffer-resources = { path = "../puffer-resources" }
puffer-tools = { path = "../puffer-tools" }
tempfile.workspace = true
serde_json.workspace = true
# Used by `cross_backend_http_mcp_round_trip` to spin up an axum-mounted
# rmcp `StreamableHttpService` shared with the puffer-core HTTP test.
axum = "0.8"
rmcp.workspace = true
tokio-util = "0.7"
