[package]
name = "puffer-runner-local"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
puffer-core = { path = "../puffer-core" }
puffer-resources = { path = "../puffer-resources" }
puffer-runner-api = { path = "../puffer-runner-api" }

[dev-dependencies]
anyhow.workspace = true
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true
