[package]
name = "puffer-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
anyhow.workspace = true
base64.workspace = true
cbc = { version = "0.1", features = ["alloc"] }
dirs.workspace = true
pbkdf2 = "0.12"
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
tempfile.workspace = true
uuid.workspace = true
