[package]
name = "puffer-skill-evolution"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["sync", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
