[package]
name = "puffer-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
puffer-resources = { path = "../puffer-resources" }

[dev-dependencies]
serde_yaml.workspace = true
tempfile.workspace = true
