[package]
name = "puffer-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
puffer-config = { path = "../puffer-config" }
puffer-resources = { path = "../puffer-resources" }
time.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tempfile.workspace = true
