[package]
name = "puffer-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
indexmap.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
puffer-config = { path = "../puffer-config" }
puffer-core = { path = "../puffer-core" }
puffer-provider-registry = { path = "../puffer-provider-registry" }
puffer-resources = { path = "../puffer-resources" }
puffer-session-store = { path = "../puffer-session-store" }
puffer-tools = { path = "../puffer-tools" }

[dev-dependencies]
insta.workspace = true
puffer-test-support = { path = "../puffer-test-support" }
tempfile.workspace = true
uuid.workspace = true
