[package]
name = "puffer-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
dirs.workspace = true
indexmap.workspace = true
image = { version = "0.25.8", default-features = false, features = ["png"] }
pulldown-cmark = "0.13.0"
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
regex-lite = "0.1.6"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
tracing = "0.1"
unicode-width = "0.2.0"
url = "2.5.7"
puffer-config = { path = "../puffer-config" }
puffer-core = { path = "../puffer-core" }
puffer-provider-openai = { path = "../puffer-provider-openai" }
puffer-provider-registry = { path = "../puffer-provider-registry" }
puffer-resources = { path = "../puffer-resources" }
puffer-session-store = { path = "../puffer-session-store" }
puffer-tools = { path = "../puffer-tools" }
puffer-transport-anthropic = { path = "../puffer-transport-anthropic" }

[dev-dependencies]
insta.workspace = true
puffer-test-support = { path = "../puffer-test-support" }
tempfile.workspace = true
uuid.workspace = true
