[package]
name = "corbina"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "corbina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.47"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9.0"
notify = "6"
puffer-config = { path = "../../../crates/puffer-config" }
puffer-core = { path = "../../../crates/puffer-core" }
puffer-provider-registry = { path = "../../../crates/puffer-provider-registry" }
puffer-resources = { path = "../../../crates/puffer-resources" }
puffer-runner-local = { path = "../../../crates/puffer-runner-local" }
puffer-secrets = { path = "../../../crates/puffer-secrets" }
puffer-session-store = { path = "../../../crates/puffer-session-store" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tempfile = "3.23.0"
tungstenite = "0.24"
url = "2"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23.0"

[workspace]
